--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "Jarvis",
     "version":"1.0.0",
     "description": "Jarvis Multi Device whatsappbot",
-    "logo": "https://i.imgur.com/PmfMtfa.jpeg",
+    "logo": "https://telegra.ph/file/f1ae2cd1d9d934d9c2465.jpg",
     "keywords": ["whatsapp"],
     "repository": "https://github.com/Loki-Xer/Jarvis",
     "website": "https://github.com/Loki-Xer/Jarvis",
@@ -12,12 +12,12 @@
         "BOT_INFO": {
             "description": "botname;ownername;ownernumber;image url",
             "required": true,
-            "value":"ᴊᴀʀᴠɪꜱ;ʟᴏᴋɪ-xᴇʀ;https://i.imgur.com/VIpl3q5.mp4"
+            "value":"𝐂𝚫𝚻 𝐒𝚸𝐘;𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷;https://i.imgur.com/fJ5KkpW.mp4"
         },
         "AUDIO_DATA": {
             "description": "audio package name",
             "required": true,
-            "value":"ʟᴏᴋɪ-xᴇʀ;ᴊᴀʀᴠɪꜱ;https://i.imgur.com/VgxJeCm.jpeg"
+            "value":"𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷;𝐂𝚫𝚻 𝐒𝚸𝐘;https://i.imgur.com/VgxJeCm.jpeg"
         },
         "WARN_COUNT": {
             "description": "warn count",
@@ -37,7 +37,7 @@
         "MEDIA_DATA": {
             "description": "media data that uses in list",
             "required": true,
-            "value":"ʟɪꜱᴛ ᴍᴇɴᴜ;ᴊᴀʀᴠɪꜱ-ᴍᴅ;https://i.imgur.com/ltPPMTh.jpeg"
+            "value":"𝛭𝑈𝛨𝛥𝛭𝛭𝛯𝐷;𝐂𝚫𝚻 𝐒𝚸𝐘;https://telegra.ph/file/f1ae2cd1d9d934d9c2465.jpg"
         },
         "HANDLER": {
             "description": "handler for bot. all so can be null or false",
@@ -64,12 +64,12 @@
         "STICKER_PACKNAME": {
             "description": "sticker package name",
             "required": true,
-            "value":"ʟᴏᴋɪ;ᴊᴀʀᴠɪꜱ"
+            "value":"𝐂𝚫𝚻 𝐒𝚸𝐘;𝐂𝚫𝚻 𝐒𝚸𝐘"
         },
         "SUDO": {
             "description": "owner number of the bot",
             "required": false,
-            "value":"41782221168"
+            "value":"917034167123"
         }
     },
       "addons": [{
